[package]
name = "raypump-executioner-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
bytemuck = "1.21.0"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
indicatif = "0.17.8"
rand = "0.8.5"
tracing = "0.1.40"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-stream = "0.1.17"
borsh = { version = "1.5.3"}
borsh-derive = "1.5.3"
anyhow = "1.0.53"
serde = "1.0.203"
serde_json = "1.0.117"
clap = { version = "4.5.7", features = ["derive"] }
anchor-client = { version = "0.28.0", features = ["async"] }
anchor-lang = "=0.29.0"
solana-sdk = "=1.16.27"
solana-client = "=1.16.27"
solana-account-decoder = "=1.16.27"
solana-transaction-status = "=1.16.27"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-client = "=0.7.1"
amm-cli = { git = "https://github.com/raydium-io/raydium-library" }
common = { git = "https://github.com/raydium-io/raydium-library" }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
] }
jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client" }
bs64 = "0.1.2"
bincode = "1.3.3"
bs58 = "0.4"
base64 = "0.13"
tokio-js-set-interval = "1.3.0"
lazy_static = "1.5.0"